Closes #30 JavaFX Application Foundation and sub-issues: closes #23 closes #24 closes #25 closes #26 closes #27 closes #28 closes #29.